# cloud_oracle_cidr

./: .gitignore  README.md  requirements.txt  results.ipynb
figures/visualization/: visualization.ipynb  visualization.py
oracle_python/: MANIFEST.in  requirements.txt  setup.cfg
oracle_python/src/cloud_oracle_prototype/: __main__.py  dummy_data.py  util.py
oracle_python/src/cloud_oracle_prototype/experiments/: experiment.py  util.py
oracle_python/src/cloud_oracle_prototype/experiments/use_case_drift/: experiment_drift.py  use_case_drift.py
oracle_python/src/cloud_oracle_prototype/experiments/use_case_minimization/: experiment_minimization.py  use_case_minimization.py
oracle_python/src/cloud_oracle_prototype/experiments/use_case_simulation/: experiment_simulation.py  use_case_simulation.py
oracle_python/src/cloud_oracle_prototype/queries/: conservative_drift_query.py  directed_drift_query.py  minimization_ilp.py  minimization_query.py  simulation_query.py
oracle_python/src/tests/: test_dummy_data.py
oracle_python/src/tests/queries/: test_conservative_drift_query.py  test_directed_dirft_query.py  test_minimization_ilp.py  test_minimization_query.py  test_simulation_query.py
oracle_python/tests/: test_dummy_data.py
oracle_python/tests/queries/: test_conservative_drift_query.py  test_directed_dirft_query.py  test_minimization_ilp.py  test_minimization_query.py  test_simulation_query.py
precomputation/: Cargo.toml
precomputation/src/: main.rs  monolith.rs  monolith_enumeration.rs  pipelined.rs  util.rs
results/precomputation/: precomputation.csv
(+8 files in other folders)
