[metadata]
name = cloud_oracle_prototype
version = 0.1
#license = <license name, e.g. MIT>
description = A package containing the python code of the cloud oracle
#long_description = file: README.rst
author = Tiemo Bang
#author_email = <Optional: author e-mail>
#classifiers=
#   <classifier 1>
#   <...>

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    cvxpy==1.4.1
    torch==2.1.0
    numpy==1.24.3
    cvxopt==1.3.2
    tqdm==4.66.1
    pandas==2.1.3

[options.packages.find]
where=src